adding unordered list of cities

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 
 <body>
+    <ul>
+        <li>Chicago, IL</li>
+        <li>Bloomington, IL</li>
+        <li>McKinney, TX</li>
+    </ul>
 </body>
 
 </html>
