adding cities to travel to

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <li>Chicago, IL</li>
         <li>Bloomington, IL</li>
         <li>McKinney, TX</li>
+        <ol>
+            <li>London, UK</li>
+            <li>Paris, FR</li>
+            <li>Tokyo, JP</li>
+        </ol>
     </ul>
 </body>
 
