adding the headings

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
+    <h1>Cities I have lived in either previously or currently.</h1>
     <ul>
         <li>Chicago, IL</li>
         <li>Bloomington, IL</li>
         <li>McKinney, TX</li>
+        <h2>Cities that I would like to travel to one day.</h2>
         <ol>
             <li>London, UK</li>
             <li>Paris, FR</li>
