--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
         <li>Chicago, IL</li>
         <li>Bloomington, IL</li>
         <li>McKinney, TX</li>
-        <h2>Cities that I would like to travel to one day.</h2>
-        <ol>
-            <li>London, UK</li>
-            <li>Paris, FR</li>
-            <li>Tokyo, JP</li>
-        </ol>
     </ul>
+    <p>I grew up in Chicago. I moved to Bloomington when I got a job. I moved to McKinney when I was relocated for a new position.
+    </p>
+    <h2>Cities that I would like to travel to one day.</h2>
+    <ol>
+        <li>London, UK</li>
+        <li>Paris, FR</li>
+        <li>Tokyo, JP</li>
+    </ol>
+    <p>I actually visited London in March of 2020, but due to covid turning the world upside down the trip wasn't as productive as it could have been. I also added Paris, which I was supposed to go to in March of 2020, but was unable to due to Covid travel
+        restrictions, as well as Tokyo. I just think Tokyo would be an interesting place to see.
+    </p>
 </body>
 
 </html>
