adding spans with nonbreaking spaces

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </p>
     <h2>Cities that I would like to travel to one day.</h2>
     <ol>
-        <li>London, UK</li>
-        <li>Paris, FR</li>
-        <li>Tokyo, JP</li>
+        <li>London, UK</li> <span>&nbsp</span>
+        <li>Paris, FR</li> <span>&nbsp</span>
+        <li>Tokyo, JP</li> <span>&nbsp</span>
     </ol>
     <p>I actually visited London in March of 2020, but due to covid turning the world upside down the trip wasn't as productive as it could have been. I also added Paris, which I was supposed to go to in March of 2020, but was unable to due to Covid travel
         restrictions, as well as Tokyo. I just think Tokyo would be an interesting place to see.
