adding image and embedded youtube

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
         <li>Bloomington, IL</li>
         <li>McKinney, TX</li>
     </ul>
-    <p>I grew up in Chicago. I moved to Bloomington when I got a job. I moved to McKinney when I was relocated for a new position.
+    <p>I grew up in Chicago, but moved to Bloomington when I got a job with XX. There is a neighborhood in McKinney that is very popular with photographers, known as Adriatica. It has a unique mediterranian village look to it. I will add a photo of the area
+        as well as a youtube video about life in McKinney in case you are interested.</p>
+    <img src="adriatica.jpeg" alt="Adriatica in McKinney TX" width="500" height="325">
+    <p>
+        <iframe width="500" height="325" src="https://www.youtube.com/embed/ZAc5qQq96iA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
+
     <h2>Cities that I would like to travel to one day.</h2>
     <ol>
-        <li>London, UK</li> <span>&nbsp</span>
-        <li>Paris, FR</li> <span>&nbsp</span>
-        <li>Tokyo, JP</li> <span>&nbsp</span>
+        <strong><li>London, UK</li> <span>&nbsp</span></strong>
+        <em><li>Paris, FR</li> <span>&nbsp</span></em>
+        <strong><li>Tokyo, JP</li> <span>&nbsp</span></strong>
     </ol>
     <p>I actually visited London in March of 2020, but due to covid turning the world upside down the trip wasn't as productive as it could have been. I also added Paris, which I was supposed to go to in March of 2020, but was unable to due to Covid travel
         restrictions, as well as Tokyo. I just think Tokyo would be an interesting place to see.
