shuffle structure and add favorites.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>The title is nested in the head</title>
+    <title>Tom-SFSDI, HTML/CSS Practice</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <strong><li>Tokyo, JP</li> <span>&nbsp</span></strong>
     </ol>
     <p>I actually visited London in March of 2020, but due to covid turning the world upside down the trip wasn't as productive as it could have been. I also added Paris, which I was supposed to go to in March of 2020, but was unable to due to Covid travel
-        restrictions, as well as Tokyo. I just think Tokyo would be an interesting place to see.
+        restrictions which would have prevented me from returning to the US as scheduled. I added Tokyo, becuase it would be an interesting place to visit.
     </p>
 </body>
 
