updated with lang tag

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Tom-SFSDI, HTML/CSS Practice</title>
@@ -21,13 +21,17 @@
 
     <h2>Cities that I would like to travel to one day.</h2>
     <ol>
-        <strong><li>London, UK</li> <span>&nbsp</span></strong>
-        <em><li>Paris, FR</li> <span>&nbsp</span></em>
-        <strong><li>Tokyo, JP</li> <span>&nbsp</span></strong>
+        <li><strong>London, UK</strong></li>
+        <span>&nbsp;</span>
+        <li><em>Paris, FR</em></li>
+        <span>&nbsp;</span>
+        <li><strong>Tokyo, JP</strong></li>
+        <span>&nbsp;</span>
     </ol>
     <p>I actually visited London in March of 2020, but due to covid turning the world upside down the trip wasn't as productive as it could have been. I also added Paris, which I was supposed to go to in March of 2020, but was unable to due to Covid travel
-        restrictions which would have prevented me from returning to the US as scheduled. I added Tokyo, becuase it would be an interesting place to visit.
+        restrictions which would have prevented me from returning to the US as scheduled. I added Tokyo, because it would be an interesting place to visit.
     </p>
+    <a href="favorites.html">My Favorites</a>
 </body>
 
 </html>
